package com.example.pde_marketplace.model;

public class User {
}
